lab1-testsuite-larger/lab1-test-dir/ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from ParCPP.y
-----------------------------------------------------------------------------

state 44 contains 1 shift/reduce conflicts.
state 50 contains 1 shift/reduce conflicts.
state 54 contains 1 shift/reduce conflicts.
state 55 contains 2 shift/reduce conflicts.
state 58 contains 1 shift/reduce conflicts.
state 131 contains 1 reduce/reduce conflicts.
state 242 contains 1 shift/reduce conflicts.
state 243 contains 1 shift/reduce conflicts.
state 264 contains 1 reduce/reduce conflicts.
state 271 contains 1 reduce/reduce conflicts.
state 292 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pListStm -> ListStm                         (6)
	%start_pDecl -> Decl                               (7)
	%start_pListDecl -> ListDecl                       (8)
	%start_pInit -> Init                               (9)
	%start_pType3 -> Type3                             (10)
	%start_pType2 -> Type2                             (11)
	%start_pType1 -> Type1                             (12)
	%start_pListType -> ListType                       (13)
	%start_pType -> Type                               (14)
	%start_pQConst -> QConst                           (15)
	%start_pName -> Name                               (16)
	%start_pListName -> ListName                       (17)
	%start_pExp16 -> Exp16                             (18)
	%start_pExp15 -> Exp15                             (19)
	%start_pExp14 -> Exp14                             (20)
	%start_pExp13 -> Exp13                             (21)
	%start_pExp12 -> Exp12                             (22)
	%start_pExp11 -> Exp11                             (23)
	%start_pExp10 -> Exp10                             (24)
	%start_pExp9 -> Exp9                               (25)
	%start_pExp8 -> Exp8                               (26)
	%start_pExp4 -> Exp4                               (27)
	%start_pExp3 -> Exp3                               (28)
	%start_pExp2 -> Exp2                               (29)
	%start_pExp1 -> Exp1                               (30)
	%start_pExp -> Exp                                 (31)
	%start_pExp5 -> Exp5                               (32)
	%start_pExp6 -> Exp6                               (33)
	%start_pExp7 -> Exp7                               (34)
	%start_pListExp3 -> ListExp3                       (35)
	%start_pListExp11 -> ListExp11                     (36)
	%start_pListString -> ListString                   (37)
	%start_pListId -> ListId                           (38)
	Integer -> L_integ                                 (39)
	Double -> L_doubl                                  (40)
	Char -> L_charac                                   (41)
	String -> L_quoted                                 (42)
	Id -> L_Id                                         (43)
	Program -> ListDef                                 (44)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (45)
	Def -> 'inline' Type Id '(' ListArg ')' '{' ListStm '}'   (46)
	Def -> Decl                                        (47)
	Def -> 'using' QConst ';'                          (48)
	Def -> Type Id '(' ListType ')' ';'                (49)
	Def -> 'inline' Type Id '(' ListType ')' ';'       (50)
	Def -> Type 'main' '(' ListArg ')' '{' ListStm '}'   (51)
	Def -> 'typedef' Type Id ';'                       (52)
	Def -> Init                                        (53)
	Def -> 'struct' Id '{' ListDecl '}' ';'            (54)
	ListDef ->                                         (55)
	ListDef -> ListDef Def                             (56)
	Arg -> Type Id                                     (57)
	ListArg ->                                         (58)
	ListArg -> Arg                                     (59)
	ListArg -> Arg ',' ListArg                         (60)
	Stm -> Exp ';'                                     (61)
	Stm -> Decl                                        (62)
	Stm -> Init                                        (63)
	Stm -> 'return' Exp ';'                            (64)
	Stm -> 'return' ';'                                (65)
	Stm -> 'while' '(' Exp ')' Stm                     (66)
	Stm -> 'for' '(' Stm Exp ';' Exp ')' Stm           (67)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (68)
	Stm -> '{' ListStm '}'                             (69)
	Stm -> 'if' '(' Exp ')' Stm                        (70)
	Stm -> 'if' '(' Exp ')' Stm 'else' Stm             (71)
	Stm -> Type Id '(' ListArg ')' '{' Stm '}'         (72)
	Stm -> 'typedef' Type                              (73)
	Stm -> 'struct' Id '{' ListDecl '}' ';'            (74)
	ListStm ->                                         (75)
	ListStm -> ListStm Stm                             (76)
	Decl -> Type ListId ';'                            (77)
	ListDecl ->                                        (78)
	ListDecl -> ListDecl Decl                          (79)
	Init -> Type Id '=' Exp ';'                        (80)
	Type3 -> 'int'                                     (81)
	Type3 -> 'bool'                                    (82)
	Type3 -> 'void'                                    (83)
	Type3 -> 'double'                                  (84)
	Type3 -> QConst                                    (85)
	Type3 -> '(' Type ')'                              (86)
	Type2 -> 'const' Type3                             (87)
	Type2 -> Type3                                     (88)
	Type1 -> Type2 '&'                                 (89)
	Type1 -> Type2                                     (90)
	ListType ->                                        (91)
	ListType -> Type                                   (92)
	ListType -> Type ',' ListType                      (93)
	Type -> Type1                                      (94)
	QConst -> ListName                                 (95)
	Name -> Id                                         (96)
	Name -> Id '<' ListType '>'                        (97)
	ListName -> Name                                   (98)
	ListName -> Name '::' ListName                     (99)
	Exp16 -> 'true'                                    (100)
	Exp16 -> 'false'                                   (101)
	Exp16 -> Integer                                   (102)
	Exp16 -> Double                                    (103)
	Exp16 -> ListString                                (104)
	Exp16 -> Char                                      (105)
	Exp16 -> QConst                                    (106)
	Exp16 -> '(' Exp ')'                               (107)
	Exp15 -> Exp16 '[' Exp11 ']'                       (108)
	Exp15 -> Exp16 '(' ListExp3 ')'                    (109)
	Exp15 -> Exp16                                     (110)
	Exp14 -> Exp14 '.' Exp15                           (111)
	Exp14 -> Exp15 '++'                                (112)
	Exp14 -> Exp15 '--'                                (113)
	Exp14 -> '*' Exp15                                 (114)
	Exp14 -> Exp14 '->' Exp15                          (115)
	Exp14 -> Exp15                                     (116)
	Exp13 -> '++' Exp14                                (117)
	Exp13 -> '--' Exp14                                (118)
	Exp13 -> '!' Exp14                                 (119)
	Exp13 -> Exp14                                     (120)
	Exp12 -> Exp12 '*' Exp13                           (121)
	Exp12 -> Exp12 '/' Exp13                           (122)
	Exp12 -> Exp12 '%' Exp13                           (123)
	Exp12 -> Exp13                                     (124)
	Exp11 -> Exp11 '+' Exp12                           (125)
	Exp11 -> Exp11 '-' Exp12                           (126)
	Exp11 -> Exp12                                     (127)
	Exp10 -> Exp10 '<<' ListExp11                      (128)
	Exp10 -> Exp10 '>>' Exp11                          (129)
	Exp10 -> Exp11                                     (130)
	Exp9 -> Exp9 '<' Exp10                             (131)
	Exp9 -> Exp9 '>' Exp10                             (132)
	Exp9 -> Exp9 '<=' Exp10                            (133)
	Exp9 -> Exp9 '>=' Exp10                            (134)
	Exp9 -> Exp10                                      (135)
	Exp8 -> Exp8 '==' Exp9                             (136)
	Exp8 -> Exp8 '!=' Exp9                             (137)
	Exp8 -> Exp9                                       (138)
	Exp4 -> Exp4 '&&' Exp5                             (139)
	Exp4 -> Exp5                                       (140)
	Exp3 -> Exp3 '||' Exp4                             (141)
	Exp3 -> Exp4                                       (142)
	Exp2 -> Exp2 '=' Exp3                              (143)
	Exp2 -> Exp2 '+=' Exp3                             (144)
	Exp2 -> Exp2 '-=' Exp3                             (145)
	Exp2 -> Exp2 '?' Exp3 ':' Exp3                     (146)
	Exp2 -> Exp3                                       (147)
	Exp1 -> 'throw' Exp2                               (148)
	Exp1 -> Exp2                                       (149)
	Exp -> Exp1                                        (150)
	Exp5 -> Exp6                                       (151)
	Exp6 -> Exp7                                       (152)
	Exp7 -> Exp8                                       (153)
	ListExp3 ->                                        (154)
	ListExp3 -> Exp3                                   (155)
	ListExp3 -> Exp3 ',' ListExp3                      (156)
	ListExp11 -> Exp11                                 (157)
	ListExp11 -> Exp11 ListExp11                       (158)
	ListString -> String                               (159)
	ListString -> String ListString                    (160)
	ListId -> Id                                       (161)
	ListId -> Id ',' ListId                            (162)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'const'        { PT _ (TS _ 34) }
	'do'           { PT _ (TS _ 35) }
	'double'       { PT _ (TS _ 36) }
	'else'         { PT _ (TS _ 37) }
	'false'        { PT _ (TS _ 38) }
	'for'          { PT _ (TS _ 39) }
	'if'           { PT _ (TS _ 40) }
	'inline'       { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'main'         { PT _ (TS _ 43) }
	'return'       { PT _ (TS _ 44) }
	'struct'       { PT _ (TS _ 45) }
	'throw'        { PT _ (TS _ 46) }
	'true'         { PT _ (TS _ 47) }
	'typedef'      { PT _ (TS _ 48) }
	'using'        { PT _ (TS _ 49) }
	'void'         { PT _ (TS _ 50) }
	'while'        { PT _ (TS _ 51) }
	'{'            { PT _ (TS _ 52) }
	'||'           { PT _ (TS _ 53) }
	'}'            { PT _ (TS _ 54) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_charac       { PT _ (TC $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pListStm rule  6
	%start_pDecl    rule  7
	%start_pListDecl rule  8
	%start_pInit    rule  9
	%start_pType3   rule  10
	%start_pType2   rule  11
	%start_pType1   rule  12
	%start_pListType rule  13
	%start_pType    rule  14
	%start_pQConst  rule  15
	%start_pName    rule  16
	%start_pListName rule  17
	%start_pExp16   rule  18
	%start_pExp15   rule  19
	%start_pExp14   rule  20
	%start_pExp13   rule  21
	%start_pExp12   rule  22
	%start_pExp11   rule  23
	%start_pExp10   rule  24
	%start_pExp9    rule  25
	%start_pExp8    rule  26
	%start_pExp4    rule  27
	%start_pExp3    rule  28
	%start_pExp2    rule  29
	%start_pExp1    rule  30
	%start_pExp     rule  31
	%start_pExp5    rule  32
	%start_pExp6    rule  33
	%start_pExp7    rule  34
	%start_pListExp3 rule  35
	%start_pListExp11 rule  36
	%start_pListString rule  37
	%start_pListId  rule  38
	Integer         rule  39
	Double          rule  40
	Char            rule  41
	String          rule  42
	Id              rule  43
	Program         rule  44
	Def             rules 45, 46, 47, 48, 49, 50, 51, 52, 53, 54
	ListDef         rules 55, 56
	Arg             rule  57
	ListArg         rules 58, 59, 60
	Stm             rules 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74
	ListStm         rules 75, 76
	Decl            rule  77
	ListDecl        rules 78, 79
	Init            rule  80
	Type3           rules 81, 82, 83, 84, 85, 86
	Type2           rules 87, 88
	Type1           rules 89, 90
	ListType        rules 91, 92, 93
	Type            rule  94
	QConst          rule  95
	Name            rules 96, 97
	ListName        rules 98, 99
	Exp16           rules 100, 101, 102, 103, 104, 105, 106, 107
	Exp15           rules 108, 109, 110
	Exp14           rules 111, 112, 113, 114, 115, 116
	Exp13           rules 117, 118, 119, 120
	Exp12           rules 121, 122, 123, 124
	Exp11           rules 125, 126, 127
	Exp10           rules 128, 129, 130
	Exp9            rules 131, 132, 133, 134, 135
	Exp8            rules 136, 137, 138
	Exp4            rules 139, 140
	Exp3            rules 141, 142
	Exp2            rules 143, 144, 145, 146, 147
	Exp1            rules 148, 149
	Exp             rule  150
	Exp5            rule  151
	Exp6            rule  152
	Exp7            rule  153
	ListExp3        rules 154, 155, 156
	ListExp11       rules 157, 158
	ListString      rules 159, 160
	ListId          rules 161, 162

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'('            reduce using rule 55
	'bool'         reduce using rule 55
	'const'        reduce using rule 55
	'double'       reduce using rule 55
	'inline'       reduce using rule 55
	'int'          reduce using rule 55
	'struct'       reduce using rule 55
	'typedef'      reduce using rule 55
	'using'        reduce using rule 55
	'void'         reduce using rule 55
	L_Id           reduce using rule 55
	%eof           reduce using rule 55

	Program        goto state 155
	ListDef        goto state 156

State 1


	'('            shift, and enter state 110
	'bool'         shift, and enter state 111
	'const'        shift, and enter state 112
	'double'       shift, and enter state 113
	'inline'       shift, and enter state 151
	'int'          shift, and enter state 114
	'struct'       shift, and enter state 152
	'typedef'      shift, and enter state 153
	'using'        shift, and enter state 154
	'void'         shift, and enter state 115
	L_Id           shift, and enter state 43

	Id             goto state 50
	Def            goto state 147
	Decl           goto state 148
	Init           goto state 149
	Type3          goto state 105
	Type2          goto state 106
	Type1          goto state 107
	Type           goto state 150
	QConst         goto state 109
	Name           goto state 52
	ListName       goto state 53

State 2


	'('            reduce using rule 55
	'bool'         reduce using rule 55
	'const'        reduce using rule 55
	'double'       reduce using rule 55
	'inline'       reduce using rule 55
	'int'          reduce using rule 55
	'struct'       reduce using rule 55
	'typedef'      reduce using rule 55
	'using'        reduce using rule 55
	'void'         reduce using rule 55
	L_Id           reduce using rule 55
	%eof           reduce using rule 55

	ListDef        goto state 146

State 3


	'('            shift, and enter state 110
	'bool'         shift, and enter state 111
	'const'        shift, and enter state 112
	'double'       shift, and enter state 113
	'int'          shift, and enter state 114
	'void'         shift, and enter state 115
	L_Id           shift, and enter state 43

	Id             goto state 50
	Arg            goto state 145
	Type3          goto state 105
	Type2          goto state 106
	Type1          goto state 107
	Type           goto state 144
	QConst         goto state 109
	Name           goto state 52
	ListName       goto state 53

State 4


	'('            shift, and enter state 110
	'bool'         shift, and enter state 111
	'const'        shift, and enter state 112
	'double'       shift, and enter state 113
	'int'          shift, and enter state 114
	'void'         shift, and enter state 115
	L_Id           shift, and enter state 43
	%eof           reduce using rule 58

	Id             goto state 50
	Arg            goto state 142
	ListArg        goto state 143
	Type3          goto state 105
	Type2          goto state 106
	Type1          goto state 107
	Type           goto state 144
	QConst         goto state 109
	Name           goto state 52
	ListName       goto state 53

State 5


	'!'            shift, and enter state 62
	'('            shift, and enter state 133
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'bool'         shift, and enter state 111
	'const'        shift, and enter state 112
	'do'           shift, and enter state 134
	'double'       shift, and enter state 113
	'false'        shift, and enter state 67
	'for'          shift, and enter state 135
	'if'           shift, and enter state 136
	'int'          shift, and enter state 114
	'return'       shift, and enter state 137
	'struct'       shift, and enter state 138
	'throw'        shift, and enter state 88
	'true'         shift, and enter state 68
	'typedef'      shift, and enter state 139
	'void'         shift, and enter state 115
	'while'        shift, and enter state 140
	'{'            shift, and enter state 141
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	Stm            goto state 127
	Decl           goto state 128
	Init           goto state 129
	Type3          goto state 105
	Type2          goto state 106
	Type1          goto state 107
	Type           goto state 130
	QConst         goto state 131
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp4           goto state 75
	Exp3           goto state 84
	Exp2           goto state 85
	Exp1           goto state 86
	Exp            goto state 132
	Exp5           goto state 77
	Exp6           goto state 78
	Exp7           goto state 79
	ListString     goto state 61

State 6


	'!'            reduce using rule 75
	'('            reduce using rule 75
	'*'            reduce using rule 75
	'++'           reduce using rule 75
	'--'           reduce using rule 75
	'bool'         reduce using rule 75
	'const'        reduce using rule 75
	'do'           reduce using rule 75
	'double'       reduce using rule 75
	'false'        reduce using rule 75
	'for'          reduce using rule 75
	'if'           reduce using rule 75
	'int'          reduce using rule 75
	'return'       reduce using rule 75
	'struct'       reduce using rule 75
	'throw'        reduce using rule 75
	'true'         reduce using rule 75
	'typedef'      reduce using rule 75
	'void'         reduce using rule 75
	'while'        reduce using rule 75
	'{'            reduce using rule 75
	L_integ        reduce using rule 75
	L_doubl        reduce using rule 75
	L_charac       reduce using rule 75
	L_quoted       reduce using rule 75
	L_Id           reduce using rule 75
	%eof           reduce using rule 75

	ListStm        goto state 126

State 7


	'('            shift, and enter state 110
	'bool'         shift, and enter state 111
	'const'        shift, and enter state 112
	'double'       shift, and enter state 113
	'int'          shift, and enter state 114
	'void'         shift, and enter state 115
	L_Id           shift, and enter state 43

	Id             goto state 50
	Decl           goto state 124
	Type3          goto state 105
	Type2          goto state 106
	Type1          goto state 107
	Type           goto state 125
	QConst         goto state 109
	Name           goto state 52
	ListName       goto state 53

State 8


	'('            reduce using rule 78
	'bool'         reduce using rule 78
	'const'        reduce using rule 78
	'double'       reduce using rule 78
	'int'          reduce using rule 78
	'void'         reduce using rule 78
	L_Id           reduce using rule 78
	%eof           reduce using rule 78

	ListDecl       goto state 123

State 9


	'('            shift, and enter state 110
	'bool'         shift, and enter state 111
	'const'        shift, and enter state 112
	'double'       shift, and enter state 113
	'int'          shift, and enter state 114
	'void'         shift, and enter state 115
	L_Id           shift, and enter state 43

	Id             goto state 50
	Init           goto state 121
	Type3          goto state 105
	Type2          goto state 106
	Type1          goto state 107
	Type           goto state 122
	QConst         goto state 109
	Name           goto state 52
	ListName       goto state 53

State 10


	'('            shift, and enter state 110
	'bool'         shift, and enter state 111
	'double'       shift, and enter state 113
	'int'          shift, and enter state 114
	'void'         shift, and enter state 115
	L_Id           shift, and enter state 43

	Id             goto state 50
	Type3          goto state 120
	QConst         goto state 109
	Name           goto state 52
	ListName       goto state 53

State 11


	'('            shift, and enter state 110
	'bool'         shift, and enter state 111
	'const'        shift, and enter state 112
	'double'       shift, and enter state 113
	'int'          shift, and enter state 114
	'void'         shift, and enter state 115
	L_Id           shift, and enter state 43

	Id             goto state 50
	Type3          goto state 105
	Type2          goto state 119
	QConst         goto state 109
	Name           goto state 52
	ListName       goto state 53

State 12


	'('            shift, and enter state 110
	'bool'         shift, and enter state 111
	'const'        shift, and enter state 112
	'double'       shift, and enter state 113
	'int'          shift, and enter state 114
	'void'         shift, and enter state 115
	L_Id           shift, and enter state 43

	Id             goto state 50
	Type3          goto state 105
	Type2          goto state 106
	Type1          goto state 118
	QConst         goto state 109
	Name           goto state 52
	ListName       goto state 53

State 13


	'('            shift, and enter state 110
	'bool'         shift, and enter state 111
	'const'        shift, and enter state 112
	'double'       shift, and enter state 113
	'int'          shift, and enter state 114
	'void'         shift, and enter state 115
	L_Id           shift, and enter state 43
	%eof           reduce using rule 91

	Id             goto state 50
	Type3          goto state 105
	Type2          goto state 106
	Type1          goto state 107
	ListType       goto state 116
	Type           goto state 117
	QConst         goto state 109
	Name           goto state 52
	ListName       goto state 53

State 14


	'('            shift, and enter state 110
	'bool'         shift, and enter state 111
	'const'        shift, and enter state 112
	'double'       shift, and enter state 113
	'int'          shift, and enter state 114
	'void'         shift, and enter state 115
	L_Id           shift, and enter state 43

	Id             goto state 50
	Type3          goto state 105
	Type2          goto state 106
	Type1          goto state 107
	Type           goto state 108
	QConst         goto state 109
	Name           goto state 52
	ListName       goto state 53

State 15


	L_Id           shift, and enter state 43

	Id             goto state 50
	QConst         goto state 104
	Name           goto state 52
	ListName       goto state 53

State 16


	L_Id           shift, and enter state 43

	Id             goto state 50
	Name           goto state 103

State 17


	L_Id           shift, and enter state 43

	Id             goto state 50
	Name           goto state 52
	ListName       goto state 102

State 18


	'('            shift, and enter state 63
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 101
	ListString     goto state 61

State 19


	'('            shift, and enter state 63
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 100
	ListString     goto state 61

State 20


	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 99
	ListString     goto state 61

State 21


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 98
	ListString     goto state 61

State 22


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 97
	ListString     goto state 61

State 23


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 96
	ListString     goto state 61

State 24


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 71
	Exp10          goto state 95
	ListString     goto state 61

State 25


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 94
	ListString     goto state 61

State 26


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 93
	ListString     goto state 61

State 27


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp4           goto state 92
	Exp5           goto state 77
	Exp6           goto state 78
	Exp7           goto state 79
	ListString     goto state 61

State 28


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp4           goto state 75
	Exp3           goto state 91
	Exp5           goto state 77
	Exp6           goto state 78
	Exp7           goto state 79
	ListString     goto state 61

State 29


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43

	Integer        goto state 47
	Double         goto state 48
	Char           goto state 49
	String         goto state 44
	Id             goto state 50
	QConst         goto state 51
	Name           goto state 52
	ListName       goto state 53
	Exp16          goto state 54
	Exp15          goto state 55
	Exp14          goto state 56
	Exp13          goto state 57
	Exp12          goto state 58
	Exp11          goto state 71
	Exp10          goto state 72
	Exp9           goto state 73
	Exp8           goto state 74
	Exp4           goto state 75
	Exp3           goto state 84
	Exp2           goto state 90
	Exp5           goto state 77
	Exp6           goto state 78
	Exp7           goto state 79
	ListString     goto state 61

State 30


	'!'            shift, and enter state 62
	'('            shift, and enter state 63
	'*'            shift, and enter state 64
	'++'           shift, and enter state 65
	'--'           shift, and enter state 66
	'false'        shift, and enter state 67
	'throw'        shift, and enter state 88
	'true'         shift, and enter state 68
	L_integ        shift, and enter state 40
	L_doubl        shift, and enter state 69
	L_charac       shift, and enter state 70
	L_quoted       shift, and enter state 46
	L_Id           shift, and enter state 43
